--- a/final/login.html
+++ b/final/login.html
@@ -4,6 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MyShop - Login</title>
+
+  <!-- Primary Meta Tags -->
+
+  <meta name="description" content="MyShop – your trusted online store for electronics, fashion, accessories, and more. Shop quality products at great prices.">
+  <meta name="author" content="Idehen Noma">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="MyShop | Affordable Online Shopping">
+  <meta property="og:description" content="Discover amazing deals on MyShop. Browse electronics, fashion, jewelry, and more with fast delivery.">
+  <meta property="og:image" content="https://nomajeffery.github.io/wdd231/chamber/images/city.webp">
+  <meta property="og:url" content="https://nomajeffery.github.io/wdd231/chamber/directory.html">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="MyShop | Affordable Online Shopping">
+  <meta name="twitter:description" content="Shop electronics, fashion, beauty, and more with great prices on MyShop.">
+  <meta name="twitter:image" content="https://nomajeffery.github.io/wdd231/chamber/images/city.webp">
   <link rel="stylesheet" href="styles/login.css">
    <script src="script/login.js"></script>
 </head>
