--- a/final/index.html
+++ b/final/index.html
@@ -3,11 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MyShop</title>
+
+  <!-- Primary Meta Tags -->
+  <title>MyShop | Affordable Online Shopping</title>
+  <meta name="description" content="MyShop – your trusted online store for electronics, fashion, accessories, and more. Shop quality products at great prices.">
+  <meta name="author" content="Idehen Noma">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="MyShop | Affordable Online Shopping">
+  <meta property="og:description" content="Discover amazing deals on MyShop. Browse electronics, fashion, jewelry, and more with fast delivery.">
+  <meta property="og:image" content="https://nomajeffery.github.io/wdd231/chamber/images/city.webp">
+  <meta property="og:url" content="https://nomajeffery.github.io/wdd231/chamber/directory.html">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="MyShop | Affordable Online Shopping">
+  <meta name="twitter:description" content="Shop electronics, fashion, beauty, and more with great prices on MyShop.">
+  <meta name="twitter:image" content="https://nomajeffery.github.io/wdd231/chamber/images/city.webp">
+
+  <!-- Styles -->
   <link rel="stylesheet" href="styles/style.css">
-  <script src="script/script.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
+
 <body>
 
 <!-- HEADER -->
@@ -77,6 +96,6 @@
   <p>© <span id="year"></span> MyShop</p>
 </footer>
 
-
+ <script src="script/script.js"></script>
 </body>
 </html>
