--- a/final/index.html
+++ b/final/index.html
@@ -25,6 +25,7 @@
   <!-- Styles -->
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+   <script src="script/script.js" defer></script>
 </head>
 
 <body>
@@ -96,6 +97,6 @@
   <p>© <span id="year"></span> MyShop</p>
 </footer>
 
- <script src="script/script.js"></script>
+
 </body>
 </html>
