--- a/final/cart.html
+++ b/final/cart.html
@@ -3,29 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
- 
-<!-- Primary Meta Tags -->
- <title>MyShop - Cart</title>
-  <meta name="description" content="MyShop – your trusted online store for electronics, fashion, accessories, and more. Shop quality products at great prices.">
+  <title>MyShop - Shopping Cart</title>
+  <meta name="description" content="View and manage your shopping cart at MyShop. Checkout your products with secure payment.">
   <meta name="author" content="Idehen Noma">
-
+  
   <!-- Open Graph / Facebook -->
-  <meta property="og:title" content="MyShop | Affordable Online Shopping">
-  <meta property="og:description" content="Discover amazing deals on MyShop. Browse electronics, fashion, jewelry, and more with fast delivery.">
-  <meta property="og:image" content="https://nomajeffery.github.io/wdd231/chamber/images/city.webp">
-  <meta property="og:url" content="https://nomajeffery.github.io/wdd231/chamber/directory.html">
   <meta property="og:type" content="website">
-
+  <meta property="og:title" content="MyShop - Shopping Cart">
+  <meta property="og:description" content="View and manage your shopping cart at MyShop.">
+  <meta property="og:image" content="https://via.placeholder.com/1200x630?text=MyShop+Cart">
+  <meta property="og:url" content="https://example.com/cart.html">
+  <meta property="og:site_name" content="MyShop">
+  
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="MyShop | Affordable Online Shopping">
-  <meta name="twitter:description" content="Shop electronics, fashion, beauty, and more with great prices on MyShop.">
-  <meta name="twitter:image" content="https://nomajeffery.github.io/wdd231/chamber/images/city.webp">
-
-
-
-  <link rel="stylesheet" href="styles/cart.css">
-  <script src="script/cart.js"></script>
+  <meta name="twitter:title" content="MyShop - Shopping Cart">
+  <meta name="twitter:description" content="View and manage your shopping cart at MyShop.">
+  <meta name="twitter:image" content="https://via.placeholder.com/1200x630?text=MyShop+Cart">
+  <meta name="twitter:site" content="@MyShop">
+  
+  <link rel="stylesheet" href="style/cart.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -43,9 +40,10 @@
     <h3>Order Summary</h3>
     <p>Items: <span id="summary-count">0</span></p>
     <p class="total-row">Total: <span id="summary-total">₦0</span></p>
-    <button class="checkout-btn">Proceed to Checkout</button>
+    <button class="checkout-btn" type="button" aria-label="Proceed to checkout with your items">Proceed to Checkout</button>
   </div>
 </main>
 
+<script src="script/cart.js"></script>
 </body>
 </html>
