--- a/final/index.html
+++ b/final/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  
+<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Primary Meta Tags -->
@@ -10,25 +11,27 @@
   <meta name="author" content="Idehen Noma">
 
   <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
   <meta property="og:title" content="MyShop | Affordable Online Shopping">
   <meta property="og:description" content="Discover amazing deals on MyShop. Browse electronics, fashion, jewelry, and more with fast delivery.">
-  <meta property="og:image" content="https://nomajeffery.github.io/wdd231/chamber/images/city.webp">
-  <meta property="og:url" content="https://nomajeffery.github.io/wdd231/chamber/directory.html">
-  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://via.placeholder.com/1200x630?text=MyShop">
+  <meta property="og:url" content="https://example.com/index.html">
+  <meta property="og:site_name" content="MyShop">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="MyShop | Affordable Online Shopping">
   <meta name="twitter:description" content="Shop electronics, fashion, beauty, and more with great prices on MyShop.">
-  <meta name="twitter:image" content="https://nomajeffery.github.io/wdd231/chamber/images/city.webp">
+  <meta name="twitter:image" content="https://via.placeholder.com/1200x630?text=MyShop">
+  <meta name="twitter:site" content="@MyShop">
 
-  <!-- Styles -->
-  <link rel="stylesheet" href="styles/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <script src="script/script.js" defer></script>
+  <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
-
 <body>
+
+<!-- skip link for accessibility -->
+<a class="skip-link" href="#main">Skip to main content</a>
 
 <!-- HEADER -->
 <header class="site-header">
@@ -36,69 +39,59 @@
     <div class="logo">🛒 MyShop</div>
 
     <!-- Hamburger -->
-    <button class="hamburger" id="hamburger" aria-label="Toggle Menu">
+    <button class="hamburger" id="hamburger" type="button" aria-label="Toggle navigation menu" aria-expanded="false" aria-controls="navMenu">
       <span></span>
       <span></span>
       <span></span>
     </button>
 
     <div class="search-bar">
-      <input type="text" id="searchInput" placeholder="Search for products..." aria-label="Search products">
-      <button id="searchBtn" aria-label="Search">🔍</button>
+      <input type="text" id="searchInput" aria-label="Search products" placeholder="Search for products...">
+      <button id="searchBtn" type="button" aria-label="Search">🔍</button>
     </div>
 
     <div class="header-icons">
-
-      <!-- User icon -->
+      <!-- User icon now links to login page -->
       <a href="login.html" class="user-icon" aria-label="User Account">
-        <i class="fa-solid fa-user"></i>
+        <i class="fa-solid fa-user" aria-hidden="true"></i>
       </a>
 
-      <!-- Wishlist icon  -->
-      <button class="wishlist-btn" aria-label="Wishlist">
-        <i class="fa-solid fa-heart"></i>
+      <!-- Replaced decorative icon with an accessible button -->
+      <button type="button" class="wishlist-btn" aria-label="Wishlist" title="Wishlist" aria-pressed="false">
+        <i class="fa-solid fa-heart" aria-hidden="true"></i>
       </button>
 
       <!-- Cart -->
       <a href="cart.html" class="cart-icon" aria-label="Cart">
-        <i class="fa-solid fa-cart-shopping"></i>
+        <i class="fa-solid fa-cart-shopping" aria-hidden="true"></i>
         <span id="cart-count">0</span>
       </a>
-
     </div>
   </div>
 
   <!-- CATEGORY BAR -->
-  <nav class="category-bar" id="navMenu">
-    <button data-category="all" class="cat-btn active">All</button>
-    <button data-category="electronics" class="cat-btn">Electronics</button>
-    <button data-category="jewelery" class="cat-btn">Jewelery</button>
-    <button data-category="men's clothing" class="cat-btn">Men</button>
-    <button data-category="women's clothing" class="cat-btn">Women</button>
+  <nav class="category-bar" id="navMenu" aria-label="Product categories">
+    <button data-category="all" class="cat-btn active" aria-pressed="true">All</button>
+    <button data-category="electronics" class="cat-btn" aria-pressed="false">Electronics</button>
+    <button data-category="jewelery" class="cat-btn" aria-pressed="false">Jewelery</button>
+    <button data-category="men's clothing" class="cat-btn" aria-pressed="false">Men</button>
+    <button data-category="women's clothing" class="cat-btn" aria-pressed="false">Women</button>
   </nav>
 </header>
 
 <!-- MAIN CONTENT -->
-<main>
+<main id="main">
   <div id="loading">Loading products...</div>
   <div id="errorMsg"></div>
   <div id="productList" class="product-list"></div>
 </main>
 
 <!-- QUICK VIEW MODAL -->
-<div id="modal" class="modal" role="dialog" aria-modal="true" aria-labelledby="modal-title">
+<div id="modal" class="modal" role="dialog" aria-modal="true" aria-labelledby="modal-title" tabindex="-1">
   <div class="modal-content">
-    <button class="close-btn" aria-label="Close">&times;</button>
-
-    <!--  transparent placeholder -->
-    <img id="modal-img"
-      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw=="
-      alt="Product preview"
-    >
-
-    <!-- Fixed empty heading issue: aria-live -->
-    <h3 id="modal-title" aria-live="polite"></h3>
-
+    <button type="button" class="close-btn" aria-label="Close dialog">&times;</button>
+    <img id="modal-img" src="" alt="Product">
+    <h3 id="modal-title"></h3>
     <p id="modal-price"></p>
     <p id="modal-category"></p>
     <p id="modal-desc"></p>
@@ -111,5 +104,6 @@
   <p>© <span id="year"></span> MyShop</p>
 </footer>
 
+<script  src="script/script.js"  defer></script>
 </body>
 </html>
