--- a/final/login.html
+++ b/final/login.html
@@ -4,27 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MyShop - Login</title>
+  <link rel="stylesheet" href="style/login.css">
+  <meta name="description" content="Login to MyShop to access your account and orders.">
 
-  <!-- Primary Meta Tags -->
-
-  <meta name="description" content="MyShop – your trusted online store for electronics, fashion, accessories, and more. Shop quality products at great prices.">
-  <meta name="author" content="Idehen Noma">
-
-  <!-- Open Graph / Facebook -->
-  <meta property="og:title" content="MyShop | Affordable Online Shopping">
-  <meta property="og:description" content="Discover amazing deals on MyShop. Browse electronics, fashion, jewelry, and more with fast delivery.">
-  <meta property="og:image" content="https://nomajeffery.github.io/wdd231/chamber/images/city.webp">
-  <meta property="og:url" content="https://nomajeffery.github.io/wdd231/chamber/directory.html">
+  <!-- Social / Open Graph / Twitter -->
+  <link rel="canonical" href="https://example.com/login.html">
   <meta property="og:type" content="website">
+  <meta property="og:title" content="MyShop - Login">
+  <meta property="og:description" content="Login to MyShop to access your account and orders.">
+  <meta property="og:image" content="https://via.placeholder.com/1200x630?text=MyShop+Login">
+  <meta property="og:url" content="https://example.com/login.html">
 
-  <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="MyShop | Affordable Online Shopping">
-  <meta name="twitter:description" content="Shop electronics, fashion, beauty, and more with great prices on MyShop.">
-  <meta name="twitter:image" content="https://nomajeffery.github.io/wdd231/chamber/images/city.webp">
-  <link rel="stylesheet" href="styles/login.css">
-  
-   <script src="script/login.js"></script>
+  <meta name="twitter:title" content="MyShop - Login">
+  <meta name="twitter:description" content="Login to MyShop to access your account and orders.">
+  <meta name="twitter:image" content="https://via.placeholder.com/1200x630?text=MyShop+Login">
+  <meta name="twitter:site" content="@MyShop">
 </head>
 <body>
 
@@ -41,16 +36,16 @@
     <div class="login-form-container">
       <div class="logo">🛒 MyShop</div>
       <h2>Login to your account</h2>
-      <form id="loginForm">
+      <form id="loginForm" method="GET" action="form-result.html" novalidate>
         <div class="login-field">
           <label for="email">Email or Username</label>
-          <input type="text" id="email" name="email" required>
+          <input type="text" id="email" name="email" required autocomplete="username">
         </div>
         <div class="login-field">
           <label for="password">Password</label>
-          <input type="password" id="password" name="password" required>
+          <input type="password" id="password" name="password" required autocomplete="current-password">
         </div>
-        <button type="submit" class="login-btn">Log In</button>
+        <button type="submit" class="login-btn" aria-label="Submit login form">Log In</button>
       </form>
       <div class="login-footer">
         <a href="#">Forgot password?</a> | <a href="#">Create account</a>
@@ -58,5 +53,7 @@
     </div>
 
   </div>
+
+  <script type="module" src="script/login.js"></script>
 </body>
 </html>
