--- a/final/login.html
+++ b/final/login.html
@@ -27,7 +27,7 @@
 
     <!-- Left side promo / info -->
     <div class="login-info">
-      <img src="https://via.placeholder.com/300x300?text=MyShop+Promo" alt="MyShop Promo">
+      <img src="image/shoppy.webp" alt="MyShop Promo">
       <h2>Welcome to MyShop</h2>
       <p>Access your account, track orders, and explore the best deals.</p>
     </div>
