--- a/final/index.html
+++ b/final/index.html
@@ -102,6 +102,10 @@
 <!-- FOOTER -->
 <footer class="site-footer">
   <p>© <span id="year"></span> MyShop</p>
+  <div class="box-you">
+<a href="https://www.youtube.com/watch?si=tQSn_C8gPdWcFB8Q&v=HhjdImzW-Y8&feature=youtu.be"  class="youtu">youtube</a>
+  </div>
+  
 </footer>
 
 <script  src="script/script.js"  defer></script>
